[gd_scene load_steps=18 format=2]

[ext_resource path="res://assets/blue-circle.png" type="Texture" id=1]
[ext_resource path="res://assets/red-circle.png" type="Texture" id=2]
[ext_resource path="res://assets/music/theme.mp3" type="AudioStream" id=3]
[ext_resource path="res://Main.gd" type="Script" id=4]
[ext_resource path="res://assets/white-circle.png" type="Texture" id=5]
[ext_resource path="res://assets/circle-outline.png" type="Texture" id=6]
[ext_resource path="res://Player.gd" type="Script" id=7]
[ext_resource path="res://font-lg.tres" type="DynamicFont" id=8]
[ext_resource path="res://font-sm.tres" type="DynamicFont" id=9]
[ext_resource path="res://Credits.gd" type="Script" id=10]
[ext_resource path="res://font-title.tres" type="DynamicFont" id=12]
[ext_resource path="res://effects/Trail.tscn" type="PackedScene" id=14]

[sub_resource type="CanvasItemMaterial" id=1]
blend_mode = 1
light_mode = 2

[sub_resource type="CanvasItemMaterial" id=2]
blend_mode = 1

[sub_resource type="Animation" id=3]
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Duet:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[sub_resource type="Animation" id=4]
length = 3.5
tracks/0/type = "value"
tracks/0/path = NodePath("Duet/Red:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.6, 3.5 ),
"transitions": PoolRealArray( -2, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -150, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Duet/Blue:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.6, 3.5 ),
"transitions": PoolRealArray( -2, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 150, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Rail:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 2.7, 3.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Overlay:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.04, 0.04 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Overlay:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.4, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Duet/Red:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.04, 0.04 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Duet/Blue:scale")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.04, 0.04 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("../PlayBtn:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 2.7, 3.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("../Title:rect_position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0.1, 2.7, 3.3 ),
"transitions": PoolRealArray( 1, -2, 1 ),
"update": 0,
"values": [ Vector2( 200.5, -160 ), Vector2( 200.5, -160 ), Vector2( 200.5, 20 ) ]
}
tracks/9/type = "method"
tracks/9/path = NodePath("Duet/Red/Trail")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 1.8 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "enable"
} ]
}
tracks/10/type = "method"
tracks/10/path = NodePath("Duet/Blue/Trail")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 1.8 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "enable"
} ]
}
tracks/11/type = "method"
tracks/11/path = NodePath(".")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 2.7 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "remove_blend"
} ]
}

[sub_resource type="Animation" id=5]
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("comp_label:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.9, 1.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("dev_label:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.9, 1.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 2.5, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="Main" type="Node"]
script = ExtResource( 4 )

[node name="Theme" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player" type="Node2D" parent="."]
position = Vector2( 360, 360 )
script = ExtResource( 7 )

[node name="Camera2D" type="Camera2D" parent="Player"]
current = true

[node name="Rail" type="Sprite" parent="Player"]
modulate = Color( 1, 1, 1, 0 )
scale = Vector2( 0.295, 0.295 )
texture = ExtResource( 6 )

[node name="Duet" type="Node2D" parent="Player"]

[node name="Red" type="Sprite" parent="Player/Duet"]
material = SubResource( 1 )
texture = ExtResource( 2 )

[node name="Trail" parent="Player/Duet/Red" instance=ExtResource( 14 )]

[node name="Blue" type="Sprite" parent="Player/Duet"]
material = SubResource( 2 )
texture = ExtResource( 1 )

[node name="Trail" parent="Player/Duet/Blue" instance=ExtResource( 14 )]
default_color = Color( 0, 0.666667, 0.968627, 1 )

[node name="Overlay" type="Sprite" parent="Player"]
texture = ExtResource( 5 )

[node name="RestRotateAnimation" type="AnimationPlayer" parent="Player"]
autoplay = "Anim"
anims/Anim = SubResource( 3 )

[node name="Tween" type="Tween" parent="Player"]

[node name="InitAnimation" type="AnimationPlayer" parent="."]
root_node = NodePath("../Player")
anims/Anim = SubResource( 4 )

[node name="Credits" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreditsTimer" type="Timer" parent="Credits"]
wait_time = 2.5
one_shot = true
autostart = true

[node name="dev_name" type="Label" parent="Credits"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -104.5
margin_top = -85.0
margin_right = 104.5
margin_bottom = -29.0
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Kumobius"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="comp_label" type="Label" parent="Credits"]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -129.5
margin_top = 6.0
margin_right = 129.5
margin_bottom = 62.0
custom_fonts/font = ExtResource( 9 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "композитор:"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="dev_label" type="Label" parent="Credits"]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -129.5
margin_top = -109.0
margin_right = 129.5
margin_bottom = -53.0
custom_fonts/font = ExtResource( 9 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "разработчик:"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="comp_name" type="Label" parent="Credits"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -104.5
margin_top = 34.0
margin_right = 104.5
margin_bottom = 90.0
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Tim Shiel"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreditsAnimation" type="AnimationPlayer" parent="Credits"]
autoplay = "Anim"
anims/Anim = SubResource( 5 )

[node name="PlayBtn" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -83.0
margin_top = -108.0
margin_right = 83.0
margin_bottom = -46.0
custom_fonts/font = ExtResource( 8 )
text = "Начать"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -159.5
margin_top = -160.0
margin_right = 159.5
margin_bottom = -9.0
custom_fonts/font = ExtResource( 12 )
text = "DUET"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="timeout" from="Credits/CreditsTimer" to="." method="_on_CreditsTimer_timeout"]
[connection signal="animation_finished" from="Credits/CreditsAnimation" to="Credits" method="_on_CreditsAnimation_animation_finished"]
[connection signal="pressed" from="PlayBtn" to="." method="play"]
